assets/css/main.css
@font-face {
    src: url('/assets/fonts/Manrope-Regular.ttf');
    font-family: Manrope;
}

@font-face {
    src: url('/assets/fonts/Manrope-ExtraLight.ttf');
    font-family: Manrope;
    font-weight: lighter;
}

@font-face {
    src: url('/assets/fonts/Manrope-SemiBold.ttf');
    font-family: Manrope;
    font-weight: bold;
}

body {
    background: #212323;
    color: #e9e4e4;
    font-family: Manrope, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
    margin: 0;
    font-size: 0.9em;
}

.center-text {
    text-align: center;
}

.container {
    margin: 7px 14px;
}

.project-container {
    display: flex;
    justify-content: center;
    gap: 15px;
}

.project-card {
    border: solid 1px #454343;
    max-width: 300px;
    text-align: left;
    padding: 7px 14px;
}

.section {
    margin: 25px 0;
}

.rounded {
    border-radius: 4px;
}

.hero {
    background-image: url('https://media.giphy.com/media/3og0IV7MOCfnm85iRa/giphy-downsized-large.gif');
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    padding: 20px 0;
}

.hero h1, .hero p {
    margin: 0;
}

.btn {
    background: #544aea;
    color: #e9e4e4;
    border-radius: 5px;
    border: 0;
    padding: 7px 14px;
    font-family: inherit;
    cursor: pointer;
    text-decoration: none;
}

.btn:hover {
    background-color: #453cc6;
    transition: background-color 0.75s;
}

a.btn {
    display: inline-block;
}

footer {
    background: #181919;
    padding: 7px 14px;
    text-align: center;
    font-size: 0.85em;
}

